Fix Layout Issues

--- a/src/css/components/project/SectionText.module.scss
+++ b/src/css/components/project/SectionText.module.scss
@@ -4,4 +4,5 @@
   font-family: Roboto;
   font-size: $font-size-p !important;
   font-weight: 300;
+  width: 100%;
 }
